--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Thực hành Tester</title>
 </head>
 
-<script src="./BT_Cau_Dieu_Kien/B2_5.js">
+<script src="./BT_Mang/B2_15.js">
 
 </script>
 
