--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Thực hành Tester</title>
 </head>
 
-<script src="./BT_Vong_Lap/B2_10.js">
+<script src="./BT_Chuoi/B2_16.js">
 
 </script>
 
